Fix scrollbars on Windows

--- a/src/main/web/desktop.scss
+++ b/src/main/web/desktop.scss
@@ -3026,7 +3026,7 @@ label.pretendLink{
 }
 
 .layerContent{
-	overflow-y: scroll;
+	overflow-y: auto;
 	max-height: 100%;
 	height: 100%;
 	display: flex;
